src/App.css
html,body{
    height:100%;
    width: 100%;
    margin: 0;
    padding: 0;
    background-color:#EDE8CC;
    color:#3d3c37;
    font-family:Georgia, 'Times New Roman', Times, serif ;
}
.navbar{
    display: flex;
    justify-content:space-between;
    align-items:center;
    padding: 15px;
    position:relative;
    width: 100%;
    z-index: 1000;
}
.logo{
    display: flex;
    align-items:center;
    font-size: 25px;
    font-family:Georgia, 'Times New Roman', Times, serif;
    color:#4f4e48;
}
.circle{
    display:flex;
    justify-content: center;
    align-items: center;
    width: 80px;
    height: 70px;
    background-color: rgba(79, 18, 72, 0.674);
    border-radius: 50%;
    border: 5px solid rgba(79, 18, 72, 0.674);
    color:#EDE8CC;
    margin-right: 10px;
    box-shadow: -1px 4px 10px rgba(53, 46, 46, 0.5);
    font-family:Georgia, 'Times New Roman', Times, serif;
    font-weight:500px;
    letter-spacing: 2px;
    font-size: 70px;
}
.navbarLinks{
    list-style: none;
    display: flex;
    gap: 20px;
    margin-right:40px;
}
.navbarLinks li{
    font-size: 27px;
}
.navbarLinks a{
    text-decoration: none;
    color:#4A4E15;
}
.navbarLinks a:hover{
    color:#a6ab6b;
}
section{
    padding: 20px 60px;
    text-align:left;
}
#home{
    display: flex;
    padding: 80px;
    font-size:40px;
    align-items: center;
    justify-content:space-between;
    
}
.icon-links a{
    font-size:60px;
    color:rgba(79, 18, 72, 0.674);
    padding: 5px;
}
.icon-links :hover{
    color:rgba(145, 33, 132, 0.674);   
}
.profile-placeholder img{
    width: 450px;
    height: 450px;
    border-radius: 200%;
    object-fit: cover;  
}
#about{
    background-color: #d6d4939c;
    font-size:x-large;
    text-align: center;
}
#about p{
    text-align: justify;
}
#experience{
    background-color: #e8bebe72;
    font-size:x-large;
    text-align: center;
}
.experience-links{
    list-style:square;
}
.experience-links li{
    margin-bottom: 15px;
    text-align: left;
}
.experience-links a{
    text-decoration: none;
    color: #390e6e;
}
.experience-links :hover a{
    color:#be4cbe;
}
#experience h4{
    text-align: left;
}
.certifications-links{
    list-style:square;
}
.certifications-links li{
    margin-bottom: 15px;
    text-align: left;
}
.certifications-links a{
    text-decoration: none;
    color:#390e6e;
}
.certifications-links :hover a{
    color:#be4cbe;
}
#education{
    font-size:x-large;
    text-align: center;
}
.school-info{
    line-height: 0.5;
}
#projects{
    font-size:x-large;
    text-align: center;
    background-color: #c8cd8a;
}
.project-container{
    display:flex;
    flex-wrap: wrap;
    justify-content:space-between;
    gap: 20px;
    padding:20px 80px;
}
.project-box{
    background-color:#EDE8CC;
    border-radius: 10px;
    width: 550px;
    height: 250px;
    box-shadow: 0px 4px 10px;
}
.project-box a{
    text-decoration: none;
    display:inline-block;
    margin: 2px;
    color:rgba(79, 18, 72, 0.674);
}
.project-box a:hover{
    color:rgba(145, 33, 132, 0.674);  
}
#hobbies{
    font-size:x-large;
    text-align: center;
    background-color: #e8bebeab;
}
#hobbies li{
    text-align: justify;
    margin-bottom: 15px;
    list-style:none;
}
.art-container{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 25px;
    padding: 1px 40px; 
    
}
.art-box1 img{
    width: 800px;
    height: 500px;
    border-radius: 10%;
    object-fit: cover;  
    box-shadow: 0px 4px 10px;
}
.art-box2 img{
    width: 500px;
    height: 700px;
    border-radius: 10%;
    object-fit: cover;  
    box-shadow: 0px 4px 10px;
}
.art-box3 img{
    width: 500px;
    height: 700px;
    border-radius: 10%;
    object-fit: cover;  
    box-shadow: 0px 4px 10px;
}

